--- a/app/globals.css
+++ b/app/globals.css
@@ -67,3 +67,13 @@
 body {
   background: #000319;
 }
+
+@theme inline {
+  --animate-scroll: scroll var(--animation-duration, 40s) var(--animation-direction, forwards) linear infinite;
+ 
+  @keyframes scroll {
+    to {
+      transform: translate(calc(-50% - 0.5rem));
+    }
+  }
+}
